--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Hi I'm Hoang!
+description: Welcome to where I documented my thoughts (so that I do not forget them) on all things Bioengineering Innovations and Global Health issues from a college student's perspective.
