--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-cayman
 title: Hi I'm Hoang!
-description: Welcome to where I documented my thoughts (so that I do not forget them) on all things Bioengineering Innovations and Global Health issues from a college student's perspective.
+description: Welcome to where I documented my thoughts (so that I do not forget them) on all things Bioengineering, Medical Innovations and Global Health from a college student's perspective.
+
